--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "cors": "^2.8.5",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.5.4",
+    "pino": "^8.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
